replaced set route to set alarm

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <form id="routeForm" style="margin: 10px;" class="form-container">
             <input type="text" id="destinationPlace" placeholder="Enter Destination place" required class="custom-input" />
             <input type="number" id="distanceInput" placeholder="Enter Alarm Distance (meters)" required class="custom-input2" />
-            <button id="B1" type="submit">Get Route</button>
+            <button id="B1" type="submit">Set Alarm</button>
         </form>
 
         <audio id="alarmSound" src="audio/97_wake_up_alarm.mp3" preload="auto" loop></audio>
